Add note about jdk.attach.allowAttachSelf